manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-database
  name: my-database
spec:
  replicas: 1
  selector:
    app: my-database
    deploymentconfig: my-database
  strategy:
    resources: {}
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: my-database
        deploymentconfig: my-database
    spec:
      containers:
      - env:
        - name: POSTGRESQL_DATABASE
          value: my_data
        - name: POSTGRESQL_PASSWORD
          value: secret
        - name: POSTGRESQL_USER
          value: luke
        image: openshift/postgresql-92-centos7
        name: my-database
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: my-database-volume-1
      volumes:
      - emptyDir: {}
        name: my-database-volume-1
  test: false
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: my-database
  name: my-database
spec:
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: my-database
    deploymentconfig: my-database
status:
  loadBalancer: {}
kind: List
metadata: {}
