manifests/deploymentconfig.yaml

kind: DeploymentConfig
metadata:
  name: nodejs-rest-http-crud
  labels:
    app: nodejs-rest-http-crud
    provider: nodeshift
    project: nodejs-rest-http-crud
    version: 2.0.1
spec:
  template:
    spec:
      containers:
        - env:
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: my-database-secret
                  key: user
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: my-database-secret
                  key: password
          readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 8080
              scheme: HTTP
            failureThreshold: 2
            initialDelaySeconds: 60
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          image: nodejs-rest-http-crud:${RELEASE_VERSION}
          name: nodejs-rest-http-crud
          securityContext:
            privileged: false
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
    metadata:
      labels:
        app: nodejs-rest-http-crud
        project: nodejs-rest-http-crud
        provider: nodeshift
        version: 2.0.1
  replicas: 1
  selector:
    app: nodejs-rest-http-crud
    project: nodejs-rest-http-crud
    provider: nodeshift

---
apiVersion: v1
kind: Route
spec:
  to:
    kind: Service
    name: nodejs-rest-http-crud
  port:
    targetPort: 8080
metadata:
  name: nodejs-rest-http-crud
  labels:
    provider: nodeshift
    project: nodejs-rest-http-crud
    version: 2.0.1
